@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+29-Sep-2003
+~~~~~~~~~~~
+Stock icons in panel and pinboard menus.
+
 28-Sep-2003
 ~~~~~~~~~~~
 Added 'Customise Menu' to file menu. Use this to replace Format and Free.
